--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "element-ui": "^2.13.2",
     "nuxt": "^2.13.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2"
+  }
 }
