--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.13.0"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.21",
+    "nuxt": "^2.13.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
     "sass-loader": "^8.0.2"
   }
 }
