--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@nuxtjs/axios": "^5.11.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "cookie": "^0.4.1",
     "element-ui": "^2.13.2",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.21",
+    "multer": "^1.4.2",
     "nuxt": "^2.13.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
