--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "export": "nuxt export",
-    "serve": "nuxt serve",
-    "heroku-postbuild": "npm run build"
+    "serve": "nuxt serve"
   },
   "engines": {
     "node": "12.x"
